<?xml version="1.0"?>
<package format="3">
  <name>mqttclass</name>
  <version>0.0.0</version>
  <description>
    MqttClass - MQTT C++ Wrapper Class Library
  </description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>mosquitto-dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
